--- a/src/public/style.css
+++ b/src/public/style.css
@@ -58,3 +58,12 @@ canvas {
     border-color: #000;
     color: red;
 }
+
+#users {
+    position: absolute;
+    top: 5px;
+    padding: 10px;
+    margin-left: 80%;
+    font-size: 20px;
+    color: green;
+}
